--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>숫자 4자리 랜덤 생성기</title>
+  <title>숫자 4자리 랜덤 생성기!</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     button { padding: 10px 16px; font-size: 16px; }
@@ -155,4 +155,5 @@
 })();
 </script>
 </body>
+
 </html>
